# subsonic-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  config.rs  main.rs  mpris.rs  tui.rs
src/client/: api.rs  auth.rs  mod.rs  models.rs
src/player/: backend.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: library.rs  lyrics.rs  mod.rs  now_playing.rs  queue.rs  search.rs
